[gd_scene load_steps=4 format=3 uid="uid://cptwwmoqj2yl4"]

[ext_resource type="Script" path="res://ui/shared/pop_up/combat_view_pop_up.gd" id="1_c1a4n"]
[ext_resource type="Theme" uid="uid://p1jl1efi0vc2" path="res://ui/shared/pop_up/combat_view_pop_up_theme.tres" id="1_mpnvj"]
[ext_resource type="Texture2D" uid="uid://brid25cpk2slt" path="res://resources/sprites/icons/Group 132.png" id="2_ebm3x"]

[node name="CombatViewPopUp" type="Control"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c1a4n")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -20.0
offset_right = 97.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mpnvj")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ItemPopUpInfo" type="HBoxContainer" parent="PanelContainer/MarginContainer/CenterContainer"]
visible = false
layout_mode = 2

[node name="Action" type="Label" parent="PanelContainer/MarginContainer/CenterContainer/ItemPopUpInfo"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 1
text = "Got a"
vertical_alignment = 2

[node name="ItemName" type="Label" parent="PanelContainer/MarginContainer/CenterContainer/ItemPopUpInfo"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.698247, 1, 0.671604, 1)
text = "Placeholder"
vertical_alignment = 2

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/CenterContainer/ItemPopUpInfo"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_ebm3x")
expand_mode = 1

[node name="TextPopUpInfo" type="HBoxContainer" parent="PanelContainer/MarginContainer/CenterContainer"]
visible = false
layout_mode = 2

[node name="Action" type="Label" parent="PanelContainer/MarginContainer/CenterContainer/TextPopUpInfo"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 1
text = "Some message goes here"
vertical_alignment = 2
